grpc (1.15.0-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sat, 15 Sep 2018 15:33:29 +0000

grpc (1.14.1-1) experimental; urgency=medium

  * New upstream release.
  * Update patches.
  * Build with recent protobuf release.
  * Update Standards-Version to 4.1.5 .

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Wed, 15 Aug 2018 15:30:08 +0000

grpc (1.13.0-1) experimental; urgency=medium

  * New major upstream release.
  * Put ruby-grpc{,-tools} packages into section ruby.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sun, 01 Jul 2018 22:44:30 +0000

grpc (1.13.0~pre3-1) experimental; urgency=medium

  * New major upstream pre-release version.
  * Append installed library directory to LD_LIBRARY_PATH for linking Ruby
    bindings.
  * Conflict libgrpc-dev with libgpr2-dev as well (closes: #901218).
  * Ignore all Ruby test failures.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Wed, 27 Jun 2018 17:48:53 +0000

grpc (1.13.0~pre2-1) experimental; urgency=medium

  * New major upstream pre-release version.
  * Conflict libgrpc-dev with libgpr1-dev due to library name collision
    (closes: #901218).
  * Add ruby-grpc{,-tools} packages.
  * Add Ruby testing.
  * Enable verbose build.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sun, 17 Jun 2018 11:36:43 +0000

grpc (1.12.0-1) experimental; urgency=medium

  * New upstream release.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sun, 27 May 2018 14:06:16 +0000

grpc (1.11.0-1) experimental; urgency=medium

  [ Pirate Praveen <praveen@debian.org> ]
  * New upstream release (Closes: #875747)
  * Refresh patches
  * Tighten dependencies
  * Bump standards version to 4.1.4
  * Bump debhelper compat to 11
  * Library transition from libgrpc3 to libgrpc6 .

  [ Laszlo Boszormenyi (GCS) ]
  * Don't specify parallel to debhelper.
  * Install new C++ headers.
  * Install upstream NOTICE.txt to protobuf-compiler-grpc package.
  * Update packaging bits.