@@ -1,6 +1,7 @@
 grpc (1.15.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Update patches.
 
  -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sat, 15 Sep 2018 15:33:29 +0000
 
